--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ Pre_Processing.html
 Pre_Processing Description.pdf
 PROCEDURES_ICD.csv
 MODEL_READY_MATRIX.parquet
+DT_Top50_Features.png
+Lasso_Top50_Features.png
+DT_Feature_Importances.csv
+Lasso_Feature_Importances.csv
