--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ DT_Top50_Features.png
 Lasso_Top50_Features.png
 DT_Feature_Importances.csv
 Lasso_Feature_Importances.csv
+01Mar_AD_DT_Feature_Importances.csv
+01Mar_AD_Lasso_Feature_Importances.csv
